<resources>
    <string name="app_name">Планировщик задач</string>
    <string name="title_activity_task_list">Список задач</string>
    <string name="title_home">Главная</string>
    <string name="title_inbox">Входящие</string>
    <string name="task_list_item_remove">Удалить</string>
    <string name="task_list_item_mark_done">Пометить как завершённое</string>
    <string name="task_list_item_mark_unrealized">Пометить как незавершённое</string>
    <string name="task_list_select_all">Выделить всё</string>
    <string name="task_list_unselect_all">Снять выделение</string>
    <string name="task_name">Название задачи</string>
    <string name="task_description">Описание задачи</string>
    <string name="save">Сохранить</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="chose">Выбрать</string>
    <string name="turn_on_notification">Включить уведомление</string>
    <string name="notify_before">Оповещать за</string>
    <string name="set_as_completed">Пометить как завершённое</string>
    <string name="task_name_is_required">Необходимо указать название задачи</string>
    <string name="at">в</string>
    <string name="next_interval">Следующий</string>
    <string name="prev_interval">Пердыдущий</string>
    <string name="all_items">Все</string>
    <string name="completed_items">Завершённые</string>
    <string name="uncompleted_items">Незавершённые</string>
    <string name="completed_item">Завершённое</string>
    <string name="uncompleted_item">Незавершённое</string>
    <string name="hint_search">Поиск</string>
    <string name="select_unscheduled_task">Выбрать из входящих</string>
    <string name="cancel">Отмена</string>
</resources>
