<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/task_list_item_remove"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/task_list_item_remove"/>

    <item
            android:id="@+id/task_list_change_date"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/task_list_change_date"/>

    <item
            android:id="@+id/task_list_item_mark_as_completed"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/task_list_item_mark_done"/>

    <item
            android:id="@+id/task_list_item_mark_as_uncompleted"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/task_list_item_mark_unrealized"/>
    <item
            android:id="@+id/task_list_select_all"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/task_list_select_all"/>
    <item
            android:id="@+id/task_list_unselect_all"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/task_list_unselect_all"/>
</menu>