<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.TaskActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/saveButton"
            app:layout_constraintTop_toBottomOf="@+id/statusbar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/scrollView"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    tools:ignore="Autofill"
                    android:ems="10"
                    android:id="@+id/taskNameText"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/task_name"
                    android:layout_marginTop="100dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    tools:ignore="Autofill"
                    android:ems="10"
                    android:id="@+id/taskDescriptionText"
                    android:hint="@string/task_description"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp" android:layout_marginTop="10dp"
                    android:maxLines="4"
            />
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp" android:id="@+id/dateTimeLayout"
                    android:layout_marginTop="10dp">

                <EditText
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        tools:ignore="Autofill"
                        android:ems="10"
                        android:hint="@string/chose"
                        android:id="@+id/dateText"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textSize="24sp" android:inputType="date" android:textAlignment="center"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/dateLabel"
                        android:layout_marginStart="38dp"/>
                <EditText
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        tools:ignore="Autofill"
                        android:ems="10"
                        android:hint="@string/chose"
                        android:id="@+id/timeText"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textSize="24sp" android:inputType="time" android:textAlignment="center"
                        android:layout_marginTop="6dp"
                        app:layout_constraintTop_toBottomOf="@+id/dateText"
                        app:layout_constraintStart_toEndOf="@+id/timeLabel"
                        android:layout_marginStart="25dp"/>
                <TextView
                        android:text="@string/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dateLabel"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                        android:layout_marginTop="21dp" app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                        android:text="@string/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/timeLabel"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                        android:layout_marginTop="21dp" app:layout_constraintTop_toBottomOf="@+id/dateText"/>
                <Button
                        android:text=""
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:id="@+id/clearDateButton"
                        android:background="@drawable/clear_button"
                        android:radius="10dp"
                        android:textColor="@color/white" android:drawableEnd="@drawable/ic_close"
                        android:visibility="invisible"
                        app:layout_constraintStart_toEndOf="@+id/timeText" android:layout_marginStart="9dp"
                        android:layout_marginTop="55dp" app:layout_constraintTop_toTopOf="parent"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:id="@+id/notificationLayout"
                    android:layout_gravity="start|right">

                <EditText
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        tools:ignore="Autofill"
                        android:ems="10"
                        android:text=""
                        android:maxLength="10"
                        android:hint="@string/chose"
                        android:id="@+id/notificationOffsetTimeText"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textSize="24sp" android:inputType="time" android:textAlignment="center"
                        app:layout_constraintStart_toEndOf="@+id/notificationOffsetLabel"
                        android:layout_marginStart="16dp" android:layout_marginTop="21dp"
                        app:layout_constraintTop_toBottomOf="@+id/enableNotificationCheckBox"/>
                <CheckBox
                        android:text="@string/turn_on_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/enableNotificationCheckBox"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="20dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="20dp"/>
                <TextView
                        android:text="@string/notify_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/notificationOffsetLabel"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@+id/enableNotificationCheckBox"/>
            </android.support.constraint.ConstraintLayout>
            <CheckBox
                    android:text="@string/set_as_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/isCompletedCheckBox"
                    android:layout_marginStart="20dp"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </ScrollView>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="25dp" android:id="@+id/statusbar" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

    </android.support.constraint.ConstraintLayout>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorPrimary" android:textColor="#FFFFFF"/>
</android.support.constraint.ConstraintLayout>